# Kolam

./: cnn_model.py  database.py  generate_kolam.py  imagr_utils.py  interactive_draw.py  kolam_generator.py  learn_mode.py  main.py  pattern_analyser.py  postgres_database.py  pyproject.toml  upload_analyze.py
