[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit>=1.49.1",
    "scipy>=1.16.2",
    "opencv-python>=4.11.0.86",
    "tensorflow>=2.20.0",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "streamlit-image-coordinates>=0.4.0",
    "keras>=3.11.3",
]
